# Projeto02_Dio.LuisaLabs

./: .gitignore  README.md  main.py  pyproject.toml
python/: funcoes.py  servicos.py  utils.py
